--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-openai = "0.24.0"
+clap = { version = "4.5.18", features = ["derive"] }
+csv = "1.3.0"
+rand = { version = "0.8.5", features = ["alloc"] }
+serde = { version = "1.0.210", features = ["serde_derive", "derive"] }
+serde_json = "1.0.128"
+
+[build-dependencies]
+prettyplease = "0.2"
+schemars = "0.8"
+serde_json = "1.0.128"
+syn = "2.0"
+typify = "0.2.0"
