--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,13 @@ edition = "2021"
 async-openai = "0.24.0"
 clap = { version = "4.5.18", features = ["derive"] }
 csv = "1.3.0"
+dotenv = "0.15.0"
 rand = { version = "0.8.5", features = ["alloc"] }
+schemars = "0.8"
 serde = { version = "1.0.210", features = ["serde_derive", "derive"] }
+serde-json-schema = "0.1.1"
 serde_json = "1.0.128"
+tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
 
 [build-dependencies]
 prettyplease = "0.2"
