feat: added additional output options

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,7 @@
                 }
             },
             "args": [
+                "--what-if",
                 "character"
             ],
             "cwd": "${workspaceFolder}",
