--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,14 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.89"
 async-openai = "0.24.0"
+base64 = "0.22.1"
 clap = { version = "4.5.18", features = ["derive"] }
 csv = "1.3.0"
 dotenvy = "0.15.7"
+image = "0.25.2"
 indicatif = "0.17.8"
 rand = { version = "0.8.5", features = ["alloc"] }
+reqwest = "0.12.8"
 serde = { version = "1.0.210", features = ["serde_derive", "derive"] }
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
