--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = "1.0.89"
 async-openai = "0.24.0"
 base64 = "0.22.1"
+chrono = "0.4.38"
 clap = { version = "4.5.18", features = ["derive"] }
 csv = "1.3.0"
 dotenvy = "0.15.7"
