--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,27 +1,18 @@
 [package]
-name = "rpg-asset-generator"
-version = "0.1.0"
+name = "ai-asset-generator"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0.89"
-async-openai = "0.24.0"
-base64 = "0.22.1"
-chrono = "0.4.38"
-clap = { version = "4.5.18", features = ["derive"] }
-csv = "1.3.0"
-dotenvy = "0.15.7"
-image = "0.25.2"
-indicatif = "0.17.8"
-rand = { version = "0.8.5", features = ["alloc"] }
-reqwest = "0.12.8"
-serde = { version = "1.0.210", features = ["serde_derive", "derive"] }
-serde_json = "1.0.128"
-tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
+ai-images = { git = "ssh://github.com/DrakeRichards/ai-images.git", version = "0.1.1" }
+anyhow = "1.0.95"
+clap = { version = "4.5.23", features = ["derive"] }
+llm-structured-response = { git = "ssh://github.com/DrakeRichards/llm-structured-response.git", version = "0.1.2" }
+minijinja = { version = "2.5.0", features = ["serde_json"] }
+random-phrase-generator = { git = "ssh://github.com/DrakeRichards/random-phrase-generator.git", version = "0.1.0" }
+serde = "1.0.216"
+serde_json = "1.0.134"
+tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
+toml = "0.8.19"
 
 [build-dependencies]
-prettyplease = "0.2"
-schemars = "0.8"
-serde_json = "1.0.128"
-syn = "2.0"
-typify = "0.2.0"
