--- a/asset_generator/Cargo.toml
+++ b/asset_generator/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "asset_generator"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
@@ -22,6 +22,9 @@ serde = "1.0.216"
 serde_json = "1.0.134"
 tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
 toml = "0.8.19"
+ollama-rs = { version = "0.2.7", git = "https://github.com/DrakeRichards/ollama-rs.git" }
+futures = "0.3.31"
+mini-tokio = "0.3.2"
 
 [build-dependencies]
 
