--- a/llm_structured_response/Cargo.toml
+++ b/llm_structured_response/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "llm_structured_response"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 [dependencies]
@@ -11,6 +11,9 @@ clap = { version = "4.5.23", features = ["derive"] }
 dotenvy = "0.15.7"
 serde = "1.0.216"
 serde_json = "1.0.134"
+ollama-rs = { version = "0.2.7", git = "https://github.com/DrakeRichards/ollama-rs.git" }
+reqwest = { version = "0.12.12", features = ["blocking", "json"] }
+jsonschema = "0.29.0"
 
 [build-dependencies]
 
