--- a/random_phrase_generator/Cargo.toml
+++ b/random_phrase_generator/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 anyhow = "1.0.95"
 csv = "1.3.1"
 rand = "0.8.5"
-serde = "1.0.216"
+serde = { version = "1.0.216", features = ["derive"] }
 
 [build-dependencies]
 
