--- a/ai_images/cargo.toml
+++ b/ai_images/cargo.toml
@@ -22,3 +22,9 @@ tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
 image = "0.25.5"
 kamadak-exif = "0.6.1"
 toml = "0.8.19"
+serial_test = "3.2.0"
+
+[lints.clippy]
+unwrap_used = "warn"
+expect_used = "warn"
+panic = "warn"
