--- a/llm_structured_response/Cargo.toml
+++ b/llm_structured_response/Cargo.toml
@@ -19,3 +19,6 @@ jsonschema = "0.29.0"
 
 [dev-dependencies]
 tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
+serial_test = "3.2.0"
+
+[lints.clippy]
