--- a/ai_images/cargo.toml
+++ b/ai_images/cargo.toml
@@ -1,30 +1,26 @@
 [package]
 name = "ai_images"
 version = "0.1.0"
-edition = "2021"
+edition.workspace = true
 
 [dependencies]
-anyhow = "1.0.95"
-async-openai = "0.26.0"
-async-trait = "0.1.84"
-base64 = "0.22.1"
-chrono = "0.4.39"
-clap = { version = "4.5.23", features = ["derive"] }
-dotenvy = "0.15.7"
-reqwest = "0.12.12"
-serde = "1.0.216"
-serde_json = "1.0.134"
-tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
-
-[build-dependencies]
+anyhow = { workspace = true }
+async-openai = { workspace = true }
+async-trait = { workspace = true }
+base64 = { workspace = true }
+chrono = { workspace = true }
+clap = { workspace = true, features = ["derive"] }
+dotenvy = { workspace = true }
+reqwest = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+tokio = { workspace = true, features = ["rt-multi-thread"] }
 
 [dev-dependencies]
-image = "0.25.5"
-kamadak-exif = "0.6.1"
-toml = "0.8.19"
-serial_test = "3.2.0"
+image = { workspace = true }
+kamadak-exif = { workspace = true }
+toml = { workspace = true }
+serial_test = { workspace = true }
 
-[lints.clippy]
-unwrap_used = "warn"
-expect_used = "warn"
-panic = "warn"
+[lints]
+workspace = true
