--- a/random_phrase_generator/Cargo.toml
+++ b/random_phrase_generator/Cargo.toml
@@ -1,20 +1,14 @@
 [package]
 name = "random_phrase_generator"
 version = "0.1.0"
-edition = "2021"
+edition.workspace = true
 
 [dependencies]
-anyhow = "1.0.95"
-csv = "1.3.1"
-rand = "0.8.5"
-serde = { version = "1.0.216", features = ["derive"] }
-ex = "0.1.3"
+anyhow = { workspace = true }
+csv = { workspace = true }
+rand = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+ex = { workspace = true }
 
-[build-dependencies]
-
-[dev-dependencies]
-
-[lints.clippy]
-unwrap_used = "warn"
-expect_used = "warn"
-panic = "warn"
+[lints]
+workspace = true
