--- a/llm_structured_response/Cargo.toml
+++ b/llm_structured_response/Cargo.toml
@@ -1,23 +1,19 @@
 [package]
 name = "llm_structured_response"
-version = "0.2.0"
+version = "0.3.0"
 edition.workspace = true
 
 [dependencies]
 anyhow = { workspace = true }
-async-openai = { workspace = true }
-async-trait = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 dotenvy = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-ollama-rs = { workspace = true }
-reqwest = { workspace = true, features = ["blocking", "json"] }
-jsonschema = { workspace = true }
+llm = { version = "1.1.0", git = "https://github.com/DrakeRichards/llm.git" }
+tokio = { workspace = true, features = ["rt", "macros"] }
 
 [dev-dependencies]
-tokio = { workspace = true, features = ["rt-multi-thread"] }
-serial_test = { workspace = true }
+jsonschema = { workspace = true }
 
 [lints]
 workspace = true
