--- a/llm_structured_response/Cargo.toml
+++ b/llm_structured_response/Cargo.toml
@@ -8,12 +8,12 @@ anyhow = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 dotenvy = { workspace = true }
 serde = { workspace = true }
-serde_json = { workspace = true }
 llm = { version = "1.1.0", git = "https://github.com/DrakeRichards/llm.git" }
 tokio = { workspace = true, features = ["rt", "macros"] }
 
 [dev-dependencies]
-jsonschema = { workspace = true }
+toml = { workspace = true }
+serde_json = { workspace = true }
 
 [lints]
 workspace = true
