--- a/random_phrase_generator/Cargo.toml
+++ b/random_phrase_generator/Cargo.toml
@@ -5,8 +5,8 @@ edition.workspace = true
 
 [dependencies]
 anyhow = { workspace = true }
-csv = { workspace = true }
-rand = { workspace = true }
+csv = "1.3.1"
+rand = "0.8.5"
 serde = { workspace = true, features = ["derive"] }
 ex = { workspace = true }
 
